Minimal VM: set_state is not a member of AttachListener

XMLWordPrintable

    • svc
    • b07

        minimal build is broken after JDK-8225690. Output:

        $ make hotspot CONF=linux-x86_64-minimal-release
        Building target 'hotspot' in configuration 'linux-x86_64-minimal-release'
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp: In function 'void signal_thread_entry(JavaThread*, Thread*)':
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:367:43: error: 'transit_state' is not a member of 'AttachListener'
                   AttachListenerState cur_state = AttachListener::transit_state(AL_INITIALIZING, AL_NOT_INITIALIZED);
                                                   ^
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:376:15: error: 'set_state' is not a member of 'AttachListener'
                       AttachListener::set_state(AL_NOT_INITIALIZED);
                       ^
        At global scope:
        cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
        gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/os.o] Error 1
        gmake[2]: *** [hotspot-minimal-libs] Error 1

        ERROR: Build failed for target 'hotspot' in configuration 'linux-x86_64-minimal-release' (exit code 2)

        === Output from failing command(s) repeated here ===
        * For target hotspot_variant-minimal_libjvm_objs_os.o:
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp: In function 'void signal_thread_entry(JavaThread*, Thread*)':
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:367:43: error: 'transit_state' is not a member of 'AttachListener'
                   AttachListenerState cur_state = AttachListener::transit_state(AL_INITIALIZING, AL_NOT_INITIALIZED);
                                                   ^
        /home/aoqi/jdk/src/hotspot/share/runtime/os.cpp:376:15: error: 'set_state' is not a member of 'AttachListener'
                       AttachListener::set_state(AL_NOT_INITIALIZED);
                       ^
        At global scope:
        cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]

        * All command lines available in /home/aoqi/jdk/build/linux-x86_64-minimal-release/make-support/failure-logs.
        === End of repeated output ===

        No indication of failed target found.
        Hint: Try searching the build log for '] Error'.
        Hint: See doc/building.html#troubleshooting for assistance.

        make[1]: *** [main] Error 1
        make: *** [hotspot] Error 2

              Assignee:
              Yasumasa Suenaga
              Reporter:
              Qi Ao
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: