8227815: Minimal VM: set_state is not a member of AttachListener

Reviewed-by: cjplummer